ASC Prod BAckup/ASC Prod/force-app/main/default/objects/CookieConsentCategory__c/fields/DefaultValue__c.field-meta.xml
<CustomField>
    <fullName>DefaultValue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The default opt-in value for the section.</description>
    <inlineHelpText>The default opt-in value for the section.</inlineHelpText>
    <label>Default Value</label>
    <type>Checkbox</type>
</CustomField>