ASC Prod BAckup/ASC Prod/force-app/main/default/objects/CookieConsentCategory__c/fields/Manditory__c.field-meta.xml
<CustomField>
    <fullName>Manditory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the cookie consent section is mandatory.</description>
    <inlineHelpText>Mark true if the section is mandatory</inlineHelpText>
    <label>Mandatory</label>
    <type>Checkbox</type>
</CustomField>