ASC Prod BAckup/ASC Prod/force-app/main/default/objects/CookieConsentCategory__c/fields/RelatedAuthorizationForm__c.field-meta.xml
<CustomField>
    <fullName>RelatedAuthorizationForm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Authorization Form that the User will consent to for each section.</description>
    <label>Related Authorization Form</label>
    <referenceTo>AuthorizationFormText</referenceTo>
    <relationshipLabel>Cookie Consent Categories</relationshipLabel>
    <relationshipName>Cookie_Consent_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>